--- a/src/components/App.css
+++ b/src/components/App.css
@@ -8293,7 +8293,7 @@ a.result + #matches.mobile,
 
 
    .resource .data#outline > div:last-child { overflow-x:auto; }
-   .resource .data#outline .root + div span.top { min-width:75vw; margin-top:7px; }
+   .resource .data#outline .root + div span.top { /*min-width:75vw;*/ margin-top:7px; }
    .resource .data#outline .root + div > .top:first-child { margin-top:5px;}
    .resource .data#outline .root + div .top + .details { min-width:90vw; }
    .resource .data#outline .root + div .abs { transform: scale(1.3);  transform-origin: 0 50%; }
@@ -8423,7 +8423,7 @@ a.result + #matches.mobile,
 
    #root .App #res-container, #search-bar > div:first-child > div:first-child { width:100%; }
 
-   .App.home:not(.khmerServer) #search-bar { padding:15px; width:auto;}
+   /* .App.home:not(.khmerServer) #search-bar { padding:15px; width:auto;} */
    #search-bar > div:first-child > div:first-child  { width:calc(100vw - 30px) !important;  box-sizing: border-box;}
    .SearchPane .formControl { bottom:25px; }
    .App.home .SearchPane .formControl { left:31px; }
@@ -8536,6 +8536,7 @@ a.result + #matches.mobile,
 
 
 
+   /*
    .resource > .ariane { 
       position: fixed;
       z-index: 100;
@@ -8560,7 +8561,7 @@ a.result + #matches.mobile,
      text-overflow: ellipsis;
      vertical-align: bottom;
    }
-
+   */
 }
 
 
